added one project added content for sql injections and defined basic styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div>
                     <a href="projects/project3.html">
-                        <img src="projects/logo-removebg.png" width="200px" height="152px">
+                        <img src="images/logo-removebg.png" width="200px" height="152px">
                         <p>Price Comparison of GeM products with other e-marketplaces</p>
                     </a>
                 </div>
