--- a/projects/project1.html
+++ b/projects/project1.html
@@ -5,11 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sql injections</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="page-header">
     <h1>SQL Injections</h1>
-    <h2>What is SQL?</h2>
+    <p>done by Task Titans</p>
+    </div>
+    <main>
+        <h1 class="heading">What is SQL?</h1>
     <p>Structured query language or SQL for short is a language for storing and processing information in a relational database. A relational database stores information in tabular form,i.e,rows and columns representing different data attritubes and the relationsips between values.</p>
-    <img
+    <figure>
+    <img src="..\images\relational-db-example.png" height="350px" width="auto">
+    <figcaption>an Example of a relational database</figcaption>
+    </figure>
+    <h3 class="heading">Queries</h3>
+    <p>Commands run in sql are called queries,to retrive data from SQL we use queries. Most queries are easily understood and uses simple words.For Eg:</p>
+    <code>SELECT * FROM USERS;</code>
+    <p> will select all the rows and columns from the table <code>USERS</code></p>
+    <h1 class="heading">What is a SQL Injection?</h1>
+    <p>Now lets consider a totally real banking website <a href="https://demo.testfire.net/login.jsp" target="_blank">AltoroMutual</a></p>
+    <figure>
+        <img src="..\images\login.jpg" height="200px" width="auto">
+        <figcaption>The login page of the AltoroMutual website</figcaption>
+    </figure>
+    <p>the way the login works is,if the Username and Password you entered are in the database and they match, then SQL returns a value of TRUE which then tells the website to give access to the user.The Query for this would be:</p>
+    <code>SELECT * FROM users WHERE username='#' AND password='#'</code>
+    <p>the # represents the value entered by the user.</p>
+    </main>
 </body>
 </html>
