Made the page resposnive added about team, some more small content to mysql injections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                <img src="images/logo.png" height="70px" width="auto">
             </div>
             <div class="header-links">
-                <a href="#">about team</a>
+                <a href="projects/about_team.html">about team</a>
             </div>
         </div>
         <div class="dark-main">
